[gd_scene load_steps=3 format=3 uid="uid://dq8cdfapse4fq"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_sa2nj"]
[ext_resource type="Theme" uid="uid://bqcufoip767ib" path="res://textures/ui.tres" id="2_0568b"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_sa2nj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MemoryCountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="MemoriesLabel" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_0568b")
text = "memories"

[node name="MemoryContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_0568b")
text = "DESCRIPTION"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer4"]
layout_mode = 2
theme_override_constants/margin_bottom = 175

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer4/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_0568b")
theme_override_font_sizes/font_size = 35
text = "you must forgo a memory"
horizontal_alignment = 1
